<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:collapsedTitleTextAppearance="@style/TextAppearance.MyApp.Title.Collapsed"
            app:expandedTitleTextAppearance="@style/TextAppearance.MyApp.Title.Expanded"
            app:expandedTitleMarginStart="10dp"
            app:expandedTitleMarginBottom="10dp"
            app:expandedTitleMarginEnd="10dp"
            app:title=""
            >
        <!--<net.opacapp.multilinecollapsingtoolbar.CollapsingToolbarLayout-->
            <!--android:id="@+id/collapsing_toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--app:layout_scrollFlags="scroll|exitUntilCollapsed"-->
            <!--android:fitsSystemWindows="true"-->
            <!--app:contentScrim="?attr/colorPrimary"-->
            <!--app:collapsedTitleTextAppearance="@style/TextAppearance.MyApp.Title.Collapsed"-->
            <!--app:expandedTitleTextAppearance="@style/TextAppearance.MyApp.Title.Expanded"-->
            <!--app:expandedTitleMarginStart="10dp"-->
            <!--app:expandedTitleMarginBottom="10dp"-->
            <!--app:expandedTitleMarginEnd="10dp"-->
            <!--app:maxLines="3">-->
            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/float_favoriteplus"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"
        android:src="@drawable/favoriteplus"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin">

                    <TextView
                        android:layout_marginTop="5dp"
                        android:id="@+id/title_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Info"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <TextView
                        android:layout_below="@+id/title_movie"
                        android:layout_marginTop="5dp"
                        android:id="@+id/movie_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name" />
                    <ImageView
                        android:layout_below="@+id/movie_info"
                        android:id="@+id/movie_poster"
                        android:layout_marginTop="10dp"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/header"/>
                    <TextView
                        android:id="@+id/movie_rate"
                        android:layout_marginTop="65dp"
                        android:layout_marginLeft="30dp"
                        android:layout_toRightOf="@+id/movie_poster"
                        android:layout_below="@+id/movie_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rate"
                        />

                    <TextView
                        android:id="@+id/movie_runtime"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="30dp"
                        android:layout_toRightOf="@+id/movie_poster"
                        android:layout_below="@+id/movie_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rate"
                        />
                    <TextView
                        android:id="@+id/movie_review"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="30dp"
                        android:layout_toRightOf="@+id/movie_poster"
                        android:layout_below="@+id/movie_runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rate"
                        />
                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContentMod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:paddingLeft="16dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/play_trailer"
                        android:id="@+id/play_trailer"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_margin"
                android:layout_marginBottom="@dimen/card_margin">

                <RelativeLayout
                    style="@style/Widget.CardContentMod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:paddingLeft="16dp"
                        android:id="@+id/title_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_detail"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <ImageView
                        android:layout_below="@+id/title_details"
                        android:id="@+id/image_videos"
                        android:layout_marginTop="5dp"
                        android:layout_width="180dp"
                        android:layout_height="100dp"/>
                    <ImageView
                        android:layout_toRightOf="@+id/image_videos"
                        android:layout_marginTop="5dp"
                        android:layout_below="@+id/title_details"
                        android:id="@+id/image_images"
                        android:layout_width="fill_parent"
                        android:layout_height="100dp"
                        android:scaleType="centerCrop"/>
                    <TextView
                        android:paddingLeft="16dp"
                        android:layout_below="@+id/image_videos"
                        android:id="@+id/count_video"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:text="@string/count_video"
                        android:gravity="center_horizontal"/>
                    <TextView
                        android:paddingLeft="16dp"
                        android:id="@+id/count_images"
                        android:layout_below="@+id/image_images"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/count_video"
                        android:gravity="center_horizontal"
                        android:text="@string/count_image"
                        />
                    <TextView
                        android:paddingLeft="16dp"
                        android:layout_below="@+id/count_video"
                        android:layout_marginTop="5dp"
                        android:id="@+id/title_genre"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/genre"/>
                    <TextView
                        android:paddingLeft="16dp"
                        android:layout_below="@+id/title_genre"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/movie_genre"/>
                    <TextView
                        android:paddingLeft="16dp"
                        android:paddingTop="5dp"
                        android:id="@+id/title_tagline"
                        android:layout_below="@id/movie_genre"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/tagline"/>
                    <TextView
                        android:paddingLeft="16dp"
                        android:layout_below="@id/title_tagline"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/movie_tagline"/>
                    <TextView
                        android:paddingLeft="16dp"
                        android:paddingTop="5dp"
                        android:id="@+id/title_company"
                        android:layout_below="@id/movie_tagline"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/company"/>
                    <TextView
                        android:paddingLeft="16dp"
                        android:layout_below="@id/title_company"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/movie_company"/>
                    <TextView
                        android:paddingLeft="16dp"
                        android:paddingTop="5dp"
                        android:id="@+id/title_budget"
                        android:layout_below="@id/movie_company"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/budget"/>
                    <TextView
                        android:paddingLeft="16dp"
                        android:layout_below="@id/title_budget"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/movie_budget"/>
                    <TextView
                        android:paddingLeft="16dp"
                        android:paddingTop="5dp"
                        android:id="@+id/title_revenue"
                        android:layout_below="@id/movie_budget"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/revenue"/>
                    <TextView
                        android:paddingLeft="16dp"
                        android:layout_below="@id/title_revenue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/movie_revenue"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_margin"
                android:layout_marginBottom="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContentMod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:paddingLeft="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/cast"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        />
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/movie_cast_recycler"
                        android:layout_width="match_parent"
                        android:clipToPadding="false"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/movie_cast_item"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_margin"
                android:layout_marginBottom="@dimen/card_margin">

                <LinearLayout

                    style="@style/Widget.CardContentMod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:paddingLeft="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/crew"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        />
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/movie_crew_recycler"
                        android:layout_width="match_parent"
                        android:clipToPadding="false"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/movie_cast_item"
                        />

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_margin"
                android:layout_marginBottom="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContentMod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:paddingLeft="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/similar"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        />
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/movie_similar_recycler"
                        android:layout_width="match_parent"
                        android:clipToPadding="false"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/movie_cast_item"
                        />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>



</android.support.design.widget.CoordinatorLayout>